<resources>
    <string name="app_name">SecurityMan</string>
    <string name="enter_your_id">Enter your ID :</string>
    <string name="input_value">Input Value</string>
    <string name="permission">permission</string>
    <string name="shared_preferences">Shared Preferences</string>
    <string name="database">Database</string>
    <string name="enter_title">Enter Title</string>
    <string name="description">Enter A Description</string>
    <string name="save">Save</string>
    <string name="DONE">DONE</string>
    <string name="failed">Failed</string>
    <string name="sqlite">SQlite</string>
    <string name="secure_sqlite">secure SQlite</string>
    <string name="realm">realm</string>
    <string name="room">ROOM</string>
    <string name="sql_injection">SQL Injection</string>
    <string name="enter_a_username">Enter a Username</string>
    <string name="enter_your_password">Enter your Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="sql_cipher">SQL Cipher</string>
    <string name="web_service">Web Service</string>
    <string name="not_secure_request">Not Secure Request</string>
    <string name="encrypted_data_request">Encrypted Data Request</string>
    <string name="ssl_pinning">SSL Pinning</string>
    <string name="laravel">Laravel</string>
    <string name="enter_your_name">Enter Your name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="re_password">Re-Password</string>


    <string name="enter_your_email">Enter your email</string>
    <string name="get_user_data">Get User Data</string>
    <string name="ipc">IPC</string>
    <string name="intent">Intent</string>
    <string name="binder">Binder</string>


</resources>